--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "version": "1.0.0",
     "require": {
         "typo3/cms-core": "^10.4 || ^11.5",
-        "typo3/cms-seo": "^10.4 || ^11.5",
+        "typo3/cms-seo": "^10.4 || ^11.5"
 
     },
     "replace": {
